# GemeMiner

./: .gitignore  README.md  pyproject.toml  requirements.txt
geme_miner/: __init__.py  __main__.py  __version__.py
geme_miner/cli/: __init__.py  __main__.py  args.py  config.py  files.py  main.py
geme_miner/core/: __init__.py  files.py  normalize.py
geme_miner/core/data_fetcher/: __init__.py  base_store.py  epic_store.py  gog_store.py  igdb.py  steam_store.py
